Commented the span white-space nowrap to see if it fixes the mobile footer.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -311,9 +311,9 @@ $white:            #ffffff !default;
 
 // Redefine span class; don't know if still necessary.
 // No wrap on lines inside span environment ?
-span {
-    white-space: nowrap;
-}
+//span {
+//    white-space: nowrap;
+//}
 
 // Everything that is an adapted version of minima CSS
 /**
